--- a/main.html
+++ b/main.html
@@ -13,19 +13,19 @@
 	<p>Located on India's western coast, it is bordered by Maharashtra and Karnataka states. It has a 65-mi (105-km) coastline on the Arabian Sea and includes the offshore island of Goa. It was ruled by Hindu dynasties and Muslim sultanates until the late 15th century and came under Portuguese control in 1510.</p>
 	<h2>Five attractions in the destination</h2>
 	<ol type = "1">
-		<li><em>Cavelossim Beach. 1,785. Beaches.</em></li>
-		<li><em>Varca Beach. 1,733. Beaches.</em></li>
-		<li><em>Candolim Beach. 1,791. Beaches.</em></li>
-		<li><em>Sheek Emporium /Armani Boutique De Goa. 693. Art Galleries • Antique Shops.</em></li>
-		<li><em>Dudhsagar Falls. 1,383. Waterfalls.</em></li>
+		<li><i><b>Cavelossim Beach. 1,785. Beaches.</b></i></li>
+		<li><i><b>Varca Beach. 1,733. Beaches.</b></i></li>
+		<li><i><b>Candolim Beach. 1,791. Beaches.</b></i></li>
+		<li><i><b>Sheek Emporium /Armani Boutique De Goa. 693. Art Galleries • Antique Shops.</b></i></li>
+		<li><i><b>Dudhsagar Falls. 1,383. Waterfalls.</b></i></li>
 	</ol>
 
-	<f2>Must-try foods in the destination</f2>
+	<h2>Must-try foods in the destination</h2>
 	<ul type = "circle">
-		<li><em>Goan Fish Curry</em></li>
-		<li><em>Chicken Cafreal</em></li>
-		<li><em>Shark Ambot Tik</em></li>
-		<li><em>Crab Xacuti</em></li>
+		<li><i><b>Goan Fish Curry</b></i></i></li>
+		<li><i><b>Chicken Cafreal</b></i></li>
+		<li><i><b>Shark Ambot Tik</b></i></li>
+		<li><i><b>Crab Xacuti</b></i></li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
